# jurisagenda

./: .env  .gitignore  README.md  docker-compose.yml  start.ps1
backend/: .env  .gitignore  Dockerfile  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_avatar_key_user_phone.py  0003_alter_user_full_name.py
backend/apps/accounts/urls/: auth.py
backend/apps/clients/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py
backend/apps/documents/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/documents/migrations/: 0001_initial.py
backend/apps/events/: admin.py  apps.py  models.py  reports.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/events/migrations/: 0001_initial.py  0002_event_tv_advance_unit_event_tv_advance_value_and_more.py  0003_setup_email_periodic_tasks.py
backend/apps/followups/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/followups/migrations/: 0001_initial.py  0002_eventfollowup_failure_reason.py
backend/apps/tv/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/core/: asgi.py  base_models.py  celery.py  exceptions.py  health.py  middleware.py  pagination.py  permissions.py  urls.py  wsgi.py
backend/core/settings/: base.py  local.py  production.py
backend/tests/: conftest.py  test_clients.py  test_documents.py  test_events.py  test_followups.py  test_tv.py  test_tv_tasks.py
nginx/: jurisagenda.conf  (+1 more)
(+47 files in other folders)
